# stateframe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: agentic_eda.md  eda-capability-roadmap.md  eda-market-research.md  ledger_tree_workflow_commands.md  option_registry.md  release.md  stateframe-library-design.md  ui_best_practices.md
docs/assets/brand/: README.md
src/stateframe/: __init__.py  api.py  artifacts.py  binary.py  branch.py  cell.py  cleaning.py  cli.py  config.py  files.py  flow.py  footprint.py  help.py  insights.py  io.py  issues.py  leaf.py  ledger.py  lens_registry.py  lenses.py  modeling.py  models.py  operations.py  profile.py  pull.py  recommendations.py  replay.py  save.py  semantic.py  shapes.py  sources.py  targets.py  transforms.py  utils.py  visualizer.py  visuals.py  workspace.py
src/stateframe/interactive/: __init__.py  serialize.py  tree.py  viewer.py  web.py
src/stateframe/interactive/assets/: ledger_tree.css  ledger_tree.js  ledger_tree_decom.css  ledger_tree_decom.js  viewer.js  viewer_decom.css  workspace_web.css  workspace_web.js
tests/: test_branch.py  test_cell.py  test_cleaning_operations.py  test_flow.py  test_footprint.py  test_help.py  test_interactive_tree.py  test_interactive_viewer.py  test_interactive_web.py  test_leaf.py  test_ledger.py  test_modeling_experiment.py  test_modeling_plan.py  test_modeling_transforms.py  test_packaging.py  test_profile.py  test_pull.py  test_replay.py  test_save.py  test_scan_bootstrap.py  test_sources.py  test_v02_architecture.py  test_visualizer_controls.py  test_workspace.py
